static/css/style.css
/* @font-face {
    font-family: 'Chiller';
    src: url('/static/font/chiller-webfont.woff2') format('woff2'),
         url('/static/font/chiller-webfont.woff') format('woff'); 
    font-weight: normal;
    font-style: normal;

} */
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Rakkas&display=swap');

body, html {
    background: url(/static/images/darkbg.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    scroll-behavior: initial;
}

p { font-style: 'Montserrat', sans-serif;
    font-size: 1.6em;
    color: #000;
} 



/*------------------------------------- Base page*/
.cb-navbar {
    background-color:#000;
    padding: 0;
    border-bottom: .5px solid #f2f2f2;
}

.cb-navbar img {
    margin: 0 1em 0 1em;
    height: 2.5em;
}

#cb-navbar--collapse {
    background-color: rgba(0,0,0, 0.8);
    z-index: 999;
}

#cb-navbar--collapse li {
    max-width: max-content;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    font-size: 1.2em;
}
#cb-navbar--collapse li span {
    margin:.5em;
    color:#f2f2f2;
}

#cb-navbar--collapse li span:hover {
    color: #208347;
    border-bottom:1px solid #208347;
    padding-bottom: 2px;
} 

footer {
    background-color: #000;
    border-top: .5px solid #f2f2f2;
}

footer a span {
    color: #f2f2f2;
    font-family: Montserrat, sans-serif;
    font-size: 1.6em;
}

footer i {
    color: #f2f2f2;
    font-size: 1.6em;
}

footer a span:hover, footer i:hover {
    color: #1bab74;
}



/*------------------------------------- Home page styling */

.cb-home h1 {
    font-family: 'Rakkas', sans-serif;
    color: #fafafa;
    font-size: 9em;
    background-color: #208347;
    margin: .5em 0 .5em 0;
    padding: .1em;
    border-radius: .1em;
}

.cb-home h3 {
    background-color:rgba(0,0,0, 0.6);
    color: #f2f2f2;
    padding: .5em;
    font-family: 'Montserrat', sans-serif;
    font-size: 2em;
    text-decoration: none;

}

.cb-bg-events {
    background-color: #777777;
}

.cb-home p {
    font-size: 2em;
    font-family: sans-serif;
    background-color:rgba(0,0,0, 0.6) ;
    color: #f2f2f2;
}
/*------------------------------------ Events page*/

.cb-search {
    background-color: rgba(0,0,0, 0.8);
    width: 50%;
}

.cb-search span {
    color:#fafafa
}

.cb-search input:focus {
    color:#fafafa
}

.cb-search input i:hover {
    font-size: 3em;
}

.cb-btn--search {
    background-color: #208347;
}

.cb-btn--search i {
    color:#f2f2f2;
    font-size: 1.5em;
}

.cb-btn--search:hover {
    background-color: #1bab74;
}

.cb-events {
    height: auto;
    overflow: hidden;
    padding: 0;
    margin: 0;
}

.cb-events img {
    max-width: 100%;
    max-height: 70%;
} 

.cb-events-card {
    border: 1px solid #208347;
    padding: 0;
    max-width: 500px;
}

.cb-events-body {
    padding: 0;
}

.cb-events-body i {
    color:#992C1D;
    padding-right: 1em;
}

.cb-card--footer {
    background-color: #000;
    border-bottom-left-radius:.2em;
    border-bottom-right-radius:.2em;
}

/*---------------------------------- Error page*/

.cb-error h5, h2 {
    color: #f2f2f2;
    background-color: rgba(0,0,0, 0.6);
    padding: .2em;
    border-radius: .2em;
    font-family: 'Rakkas',sans-serif;
    font-size: 2em;
}

.cb-error h2 span {
    font-size: 2em;
}

.cb-error a {
    color: #208347;
    text-decoration: underline;
    font-size: 1.2em;
}

.cb-error h2 span, h4 span{
    color: #992C1D;
    background-color: rgba(0,0,0, 0.6);
    padding: .2em;
    border-radius: .2em;
}

.cb-error h1 {
    margin: .3em 0 .1em 0;
}

.cb-error h5 {
    margin-top: .3em;
}

/*-------------------------------------- Climbing buddy page */
.cb-btn--filter {
    color:#208347;
    padding-left:1em;
}

.cb-filter--container a {
    background-color: #f2f2f2;
    color: #208347;
}

.cb-filter--container a:hover, .cb-filter--container a:focus {
    background-color: #fff;
    color:#208347;
}

.cb-climbs {
    height: auto;
    padding: 0;
    margin:0;
}

.cb-climbs i {
    color: #992C1D;
}

.cb-climbs h3 {
    text-decoration: none;
}

.cb-climbs_card {
    border: 1px solid #208347;
    border-radius: 0.25em;
}

.cb-climbs_body {
    padding: 0;
    border: 1px solid #208347;
    border-radius: 0.25em;
}
#climber_msg p {
    padding-bottom: .5em;
}
/*------------------------------------ Search for Climber page */

.cb-add_climb, .cb-add_event {
    background-color: #f2f2f2;
    padding: 2em;
    border: 1px solid #208347;
    border-radius: 0.5em;
    margin-top: 6em;
}

.nav-item {
    padding-right: 15px;
    font-size: 1em; 
}

i {
    color: #208347;
}

 nav {
 height:4em;
 }

h3 {
    color: #208347;
    font-family: 'Rakkas';
    font-size: 2.5em;
}

h5 {
    color:#992C1D;
    font-family: 'Rakkas', sans-serif;
    font-size: 2em;
}

/* nav a:hover {
    color: #f2f2f2;
    border-style:solid;
    border-width: thin;
} */

a:hover {
    color: #208347;
}
/* -------------------------------------   login and registration page */
.cb-login {
    background-color: #f2f2f2;
    border: 1px solid #208347;
    border-radius: 0.5em ; 
    padding: 2em;
    margin-top:6em;
}

.cb-login h3 {
    font-family: 'Rakkas', sans-serif;
    font-size: 2em;
}

.cb-register {
    background-color: #f2f2f2;
    border: 1px solid #208347;
    border-radius: 0.5em ; 
    padding: 2em;
    margin-top: 6em;   
}

.cb-register label {
    margin-right: 2em;
    font-size: 1.2em;
    font-weight: 500;
}
.cb-redirect span{
    background-color: rgba(0,0,0, 0.6);
    padding: 0.5em;
    color: #f2f2f2;
    font-size: 0.7em;

}
.cb-redirect a {
    margin-left: .5em;
    color: #208347;
}

.cb-redirect a:hover {
    text-decoration: underline;
    color: #208347;
}

.cb-climbs_card {
    max-height: 400px;
    background-color:#f2f2f2 ;
    padding: 0;
}


#cb-filter {
    background-color: #f2f2f2;
    padding: 2em;
    border: 1px solid #208347;
    border-radius: 0.5em;
    margin: 2em;
}
/*-------------------------------------------------------- Pagination */
.pagination {
    justify-content: center;
}

.pagination a {
    color: #f2f2f2;
}

.pagination a:hover {
    color: #208347;
}

.pagination li {
    display: inline-block;
    padding: 0 .5em 0 .5em;
    margin-top:1em ;
    font-family: 'Rakkas';
    font-size: 2.5em;
    background-color: rgba(0,0,0, 0.6);
}
/*---------------------------------------------------------- Buttons */

.cb-btn-add button{
    padding:1em;

}

.cb-btn--add {
    background-color: #208347;
    color:#f2f2f2;
    min-width: 50%;
    font-size: .8em;
}

.cb-btn--add i {
    font-size: 1em;
    padding-left: .8em;
    color:#f2f2f2;

}

.cb-btn--add:hover{
    background-color: #1bab74;
    color:#f2f2f2;
}

.cb-btn--add_event {
    background-color: #1bab74;
    color: #f2f2f2;
    font-size: .8em;
}

.cb-btn--add_event:hover {
    background-color: #208347;
    color:#f2f2f2;
}

.cb-btn--add_event i {
    color: #f2f2f2;
    padding-left: 1.5em;
    font-size: 1.2em;
}

.cb-btn--back {
    padding: .8em;
    background-color: #f2f2f2;
    color: #208347;
}

.cb-btn--back_events, .cb-btn--back_climbs {
    margin: 1em .5em 0 .5em;
    padding: .8em 2em .8em 2.4em;
    background-color: #f2f2f2;
    color: #208347;
}

.cb-btn--back i, .cb-btn--back_events i, .cb-btn--back_climbs i {
    font-size: 1.2em;
    padding-left: .8em;
}

.cb-btn--back:hover, .cb-btn--back_events:hover, .cb-btn--back_climbs:hover {
    color: #208347;
    background-color: #fff;
}

.cb-btn--edit, .cb-btn--accept {
    background-color: #f2f2f2;
    color: #208347;
}

.cb-btn--edit:hover, .cb-btn--accept:hover {
    background-color: #1bab74;
    color: #f2f2f2;
}

.cb-btn--add_climb {
    color: #f2f2f2;
    background-color: #208347;
}

.cb-btn--add_climb:hover {
    background-color: #1bab74;
    color: #f2f2f2;
}

.cb-btn--add_climb i {
    font-size: 1.2em;
    padding-left: .8em;
    color: #f2f2f2;
}

.cb-btn-filter i {
    padding-left: .8em;
}

.cb-btn--submit, .cb-btn--read_more {
    background-color: #208347;
    color:#f2f2f2
}

.cb-btn--submit i {
    padding-left: .8em;
}

.cb-btn--rows {
    margin: 0;
}
.cb-btn--home {
    background-color: #fafafa;
    color: #208347;
    font-size: 1.2em;
    width: 100%;
    font-family: Montserrat, sans-serif;
}

.cb-btn--home:hover {
    background-color: #1bab74;
    color: #f2f2f2;
}

.cb-btn--submit:hover, .cb-btn--read_more:hover {
    background-color:#1bab74;
    color:#f2f2f2;
}

.cb-btn--submit i {
    color: #f2f2f2;
}

.cb-btn--cancel {
    background-color: #992C1D;
    color: #f2f2f2;
}

.cb-btn--cancel:hover {
    background-color: rgb(255, 0, 0);
    color: #fafafa;
}

.cb-btn--cancel i {
    color: #fafafa;
}
/*------------------------------------ flash mseggaes*/
.flash-msg {
    line-height: 3;
}

.flash-error {
    color:#992C1D;
}

.flash-message {
    color:#208347;
}

#event_description {
    height: max-content;
}

#climb_description {
    height: max-content;
}

/*---------------------------------------- Toggle Switch */

.cb-form-switch .switcher:checked[type=checkbox]::after {
    background-color: #208347;
    box-shadow: 0 0 0 .625rem rgba(59, 148, 94, 0.5) ;
}
.switcher[type=checkbox]:checked[type=checkbox]:checked {
    background-color: #208347;
}
/*------------------------------------------Forms styling */
.cb-accept--content h5{
    font-family: 'Rakkas';
    font-size: 3em;
}
.cb-accept--content {
    background-color: #fafafa;
    border: 1px solid #208347;
    border-radius: 0.5em ;
}
.accept-icons {
    color: #208347;
    font-size: 1.2em;
}
.response {
    width: 100%;
    height: 100%;
    font-size: 1.5em;
    color: #208347;
    font-family: 'Rakkas';
} 

.input-descriptions {
    margin-right: 1em;
}
/* to change default blue color for form-outline mdbootstrap*/
/* https://mdbootstrap.com/snippets/standard/grzegorz-bujanski/2852722#css-tab-view */
.form-outline .form-control:focus~.form-notch .form-notch-leading {
    border-top: .125rem solid #3b945e;
    border-bottom: .125rem solid #3b945e;
    border-left: .125rem solid #3b945e;
}
 .form-outline .form-control:focus~.form-notch .form-notch-middle {
    border-bottom: .125rem solid;
    border-color: #3b945e;
}

.form-outline .form-control:focus~.form-notch .form-notch-trailing {
    border-color: currentcolor currentcolor currentcolor #3b945e;
    border-bottom: .125rem solid #3b945e;
    border-right: .125rem solid #3b945e;
    border-top: .125rem solid #3b945e;
}

.form-outline .form-control:focus~.form-label {
    color: #3b945e;
}		

.cb-profile {
    background-color: #fafafa;
    border-radius: 0.5em;
    border: 1px solid #208347;
}

.cb-profile h3{
    font-family: 'Rakkas', sans-serif;
    font-size: 3em;
}



/* ----------- Media Query ------------- */
@media screen and (max-width: 540px) and (min-width: 351px) {
    .pagination li {
        font-size: 1.5em;
    }
    .cb-home h1 {
        font-size: 7em;
    }
    .cb-climbs p {
        font-size: 1.5em;
    }
}


@media screen and (max-width: 350px) {
    .cb-home h1 {
        font-size: 3em;
    }
    .cb-home h3 {
        font-size: 1.6em;
    }
    footer span {
        font-size: 1.6em;
    }
    .cb-profile span{
        font-size: 0.8em;
    }
    .cb-profile h3{
        font-size: 1.8em;
    }
    .pagination li {
        font-size:1.3em;
    }
    .cb-climbs p {
        font-size: 1em;
    }
    .cb-climbs h3 {
        font-size: 1.5em;
    }
}

